--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
                 android:value="a9DbXXMN2FWGvof1CFOyDAsSKuNvkfVz"/>
 
         <activity
-                android:name=".activity.MainActivity"
+                android:name=".activity.login.LoginActivity"
                 android:screenOrientation="portrait"
                 android:windowSoftInputMode="adjustPan|stateHidden">
             <intent-filter>
@@ -56,7 +56,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".activity.login.LoginActivity"
+        <activity android:name=".activity.MainActivity"
                   android:screenOrientation="portrait"
                   android:configChanges="orientation|keyboardHidden|screenSize">
         </activity>
@@ -91,6 +91,18 @@
                   android:screenOrientation="portrait">
         </activity>
         <activity android:name=".activity.integral.IntegralRecordActivity"
+                  android:configChanges="orientation|keyboardHidden|screenSize"
+                  android:screenOrientation="portrait">
+        </activity>
+        <activity android:name=".activity.collect.CollectActivity"
+                  android:configChanges="orientation|keyboardHidden|screenSize"
+                  android:screenOrientation="portrait">
+        </activity>
+        <activity android:name=".activity.enterprise.EnterpriseMainActivity"
+                  android:configChanges="orientation|keyboardHidden|screenSize"
+                  android:screenOrientation="portrait">
+        </activity>
+        <activity android:name=".activity.enterprise.EnterpriseDetailActivity"
                   android:configChanges="orientation|keyboardHidden|screenSize"
                   android:screenOrientation="portrait">
         </activity>
