--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ repositories {
     }
 
     jcenter()
-    maven { url "https://jitpack.io"}
+//    maven { url "https://jitpack.io"}
 }
 
 android {
