--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,7 @@
         </activity>
         <activity android:name=".activity.MainActivity"
                   android:screenOrientation="portrait"
+                  android:windowSoftInputMode="adjustPan"
                   android:configChanges="orientation|keyboardHidden|screenSize">
         </activity>
         <activity android:name=".activity.login.ForgotPasswordActivity"
@@ -79,6 +80,13 @@
                   android:screenOrientation="portrait">
         </activity>
         <activity android:name=".activity.order.OrderSettlementActivity"
+                  android:windowSoftInputMode="adjustPan"
+                  android:configChanges="orientation|keyboardHidden|screenSize"
+                  android:screenOrientation="portrait">
+
+        </activity>
+        <activity android:name=".activity.search.ProductSearchActivity"
+                  android:windowSoftInputMode="adjustPan"
                   android:configChanges="orientation|keyboardHidden|screenSize"
                   android:screenOrientation="portrait">
         </activity>
