--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,5 @@ dependencies {
     compile 'com.mcxiaoke.volley:library:1.0.18'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.google.code.gson:gson:2.6.2'
+    compile 'de.greenrobot:eventbus:2.4.0'
 }
