--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,13 +48,18 @@
                 android:value="GMGvsnhjVvLz5xfKKzShwNFGlwGKoKis"/>
 
         <activity
-                android:name=".activity.login.LoginActivity"
+                android:name=".activity.splash.SplashActivity"
                 android:screenOrientation="portrait"
                 android:windowSoftInputMode="adjustPan|stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".activity.login.LoginActivity"
+                  android:screenOrientation="portrait"
+                  android:windowSoftInputMode="adjustPan"
+                  android:configChanges="orientation|keyboardHidden|screenSize">
         </activity>
         <activity android:name=".activity.MainActivity"
                   android:screenOrientation="portrait"
