--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     compile(name: 'swipetoloadLayout', ext: 'aar')
     compile files('libs/BaiduLBS_Android.jar')
     compile 'com.android.support:design:23.0.1'
-    compile 'com.android.support:recyclerview-v7:23.0.+'
+    compile 'com.android.support:recyclerview-v7:23.0.1'
     compile 'com.mcxiaoke.volley:library:1.0.18'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.google.code.gson:gson:2.6.2'
