--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
     <uses-permission android:name="android.permission.GET_TASKS"/>
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
     <uses-permission android:name="getui.permission.GetuiService"/>
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
 
     <uses-permission android:name="ANDROID.PERMISSION.BROADCAST_SMS"/>
     <uses-permission android:name="android.permission.RECEIVE_SMS"/>
