--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,10 +48,13 @@ android {
 }
 
 
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile(name: 'swipetoloadLayout', ext: 'aar')
+    compile(name: 'newpay', ext: 'aar')
+    compile(name: 'CommonbarLib-1.0.2', ext: 'aar')
     compile files('libs/BaiduLBS_Android.jar')
     compile 'com.android.support:design:23.0.1'
     compile 'com.android.support:recyclerview-v7:23.0.1'
