--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
           package="com.htyhbz.yhyg">
 
     <uses-permission android:name="android.permission.READ_LOGS"/>
@@ -34,6 +35,7 @@
             android:allowBackup="true"
             android:icon="@drawable/icon"
             android:label="@string/app_name"
+            tools:replace="android:icon"
             android:theme="@style/AppTheme">
         <service
                 android:name="com.baidu.location.f"
